maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:6: error: not found: value totheNorth
    totheNorth();
    ^IslandMaze:31: error: not found: value dir
    dir = getDirection();
    ^IslandMaze:37: error: not found: value dir
    setDirection(dir);      
                 ^