maze.island.IslandMaze.scala.code
override def run() {
  var dir:Direction = getDirection();
  
  while (!isOverBaggle()) {
    totheNorth();
    keepHandOnSideWall();
  }
  
  pickupBaggle();
}

def keepHandOnSideWall() {
  left();
  
  if (isFacingWall()) {
    right();
    if (isFacingWall()) {
      right();
    }
    else {
    	forward();
    }
  }
  else {
    forward();
  }
}

def toTheNorth() {
    dir = getDirection();
    setDirection(Direction.NORTH);
    if (!isFacingWall()) {
      forward()
    }
    else {
    setDirection(dir);      
    }

}